--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "name": "generator-adb-bandung-4",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "sampe generator android",
   "homepage": "https://github.com/irfanirawansukirman/generator-adb-bandung-4",
-  "author": {
-    "name": "Irfan Irawan Sukirman",
-    "email": "dadang.kotz@gmail.com",
-    "url": "github.com/irfanirawansukirman/"
-  },
+  "author": "Irfan Irawan Sukirman <dadang.kotz@gmail.com> (github.com/irfanirawansukirman/)",
   "files": [
     "generators"
   ],
@@ -82,6 +78,12 @@
       "prettier"
     ]
   },
-  "repository": "irfanirawansukirman/generator-adb-bandung-4",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/irfanirawansukirman/generator-adb-bandung-4.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/irfanirawansukirman/generator-adb-bandung-4/issues"
+  }
 }
