--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-adb-bandung-4",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "sampe generator android",
   "homepage": "https://github.com/irfanirawansukirman/generator-adb-bandung-4",
   "author": "Irfan Irawan Sukirman <dadang.kotz@gmail.com> (github.com/irfanirawansukirman/)",
@@ -34,9 +34,12 @@
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^2.0.1",
-    "chalk": "^2.1.0",
-    "yosay": "^2.0.1"
+    "chalk": "^1.0.0",
+    "generator-git-init": "^1.1.3",
+    "glob": "^7.0.5",
+    "mkdirp": "^0.5.1",
+    "yeoman-generator": "^0.24.1",
+    "yosay": "^1.0.0"
   },
   "jest": {
     "testEnvironment": "node"
