--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-adb-bandung-4",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "sampe generator android",
   "homepage": "https://github.com/irfanirawansukirman/generator-adb-bandung-4",
   "author": "Irfan Irawan Sukirman <dadang.kotz@gmail.com> (github.com/irfanirawansukirman/)",
@@ -17,18 +17,32 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
-    "yeoman-assert": "^3.1.0",
-    "nsp": "^2.8.0",
-    "eslint": "^4.19.1",
-    "prettier": "^1.11.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^6.1.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-config-xo": "^0.20.1",
-    "jest": "^22.0.6",
-    "mkdirp": "^0.5.1"
+    "async": "^2.0.1",
+    "filter-files": "^0.4.0",
+    "find-in-files": "^0.3.1",
+    "fs-finder": "^1.8.1",
+    "mkdirp": "^0.5.1",
+    "mv": "^2.1.1",
+    "ncp": "^2.0.0",
+    "nodegit": "^0.16.0",
+    "path": "^0.12.7",
+    "renamer": "^0.5.7",
+    "replace": "^0.3.0",
+    "rimraf": "^2.5.4",
+    "string-search": "^1.2.0",
+    "yeoman-test": "^1.0.0",
+    "yeoman-assert": "^2.0.0",
+    "eslint": "^3.1.1",
+    "eslint-config-xo-space": "^0.14.0",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-istanbul": "^1.0.0",
+    "gulp-mocha": "^2.0.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-nsp": "^2.1.0",
+    "gulp-coveralls": "^0.1.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
@@ -45,10 +59,8 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "prepublishOnly": "nsp check",
-    "pretest": "eslint .",
-    "precommit": "lint-staged",
-    "test": "jest"
+    "prepublish": "gulp prepublish",
+    "test": "gulp"
   },
   "lint-staged": {
     "*.js": [
