--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-basic-starter",
-  "version": "0.0.0",
-  "description": "ini adalah basic",
+  "version": "1.0.0",
+  "description": "ini adalah starter kit basicnya",
   "homepage": "https://github.com/irfanirawansukirman/generator-adb-bandung-4",
   "author": {
     "name": "Irfan Irawan Sukirman",
