--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "name": "generator-android-mvvm",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "ini adalah generator android mvvm saya ath",
   "homepage": "https://github.com/irfanirawansukirman/generator-adb-bandung-4",
-  "author": {
-    "name": "Irfan Irawan Sukirman",
-    "email": "dadang.kotz@gmail.com",
-    "url": "github.com/irfanirawansukirman/"
-  },
+  "author": "Irfan Irawan Sukirman <dadang.kotz@gmail.com> (github.com/irfanirawansukirman/)",
   "files": [
     "generators"
   ],
@@ -89,6 +85,12 @@
       "prettier"
     ]
   },
-  "repository": "irfanirawansukirman/generator-android-mvvm",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/irfanirawansukirman/generator-android-mvvm.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/irfanirawansukirman/generator-android-mvvm/issues"
+  }
 }
