--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-android-mvvm",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "ini adalah generator android mvvm saya ath",
   "homepage": "https://github.com/irfanirawansukirman/generator-adb-bandung-4",
   "author": "Irfan Irawan Sukirman <dadang.kotz@gmail.com> (github.com/irfanirawansukirman/)",
@@ -31,7 +31,16 @@
     "yeoman-test": "^1.0.0",
     "yeoman-assert": "^2.0.0",
     "eslint": "^3.1.1",
-    "eslint-config-xo-space": "^0.14.0"
+    "eslint-config-xo-space": "^0.14.0",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-istanbul": "^1.0.0",
+    "gulp-mocha": "^2.0.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-nsp": "^2.1.0",
+    "gulp-coveralls": "^0.1.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
